-/c/_scss/main.scss
/*
*************************************************

DANMALL.ME
General Screen Styles

Created by the epic SuperFriendly team.
http://superfriend.ly/

*************************************************
*/

@import 'variables.scss';
@import 'mixins.scss';
@import 'utilities.scss';
@import 'layout.scss';
@import 'displayPatterns.scss';
@import 'base.scss';



/*-------------------------------------------    
	Components
-------------------------------------------*/

.dm {

	// pageHeader

	&-c-pageHeader {

		@include dm-u-padding--m;

		&_title {
			@include dm-u-font--normal;
			@include dm-u-text--l;
			@include dm-u-marginBottom--xs;
		}

	}

	&-c-siteNav {

		@include dm-u-marginBottom--m;
		@include dm-u-font--sans;		
		@include dm-u-uppercase;		

		@media screen and (min-width: 850px) {			
			//@include dm-u-marginLeft--m;

			// improvisations
			width: 73%;
		}

		@media screen and (min-width: 1054px) {			
			@include dm-u-marginLeft--m;

			// improvisationser
			width: 73%;
		}

		&_item {
			@include dm-u-text--s;
			@include dm-u-align--right;

			&--active {
				display: inline-block;
				background: $sandstone;
				color: #fff;
			}
		}

	}

	// testimonials

	&-c-testimonials {

		@include dm-u-padding--m;
		@include dm-u-paddingTop--xl;

		// improvisations
		background: $ecru;

		& .dm-dp-quote {
			&:after {
				@include dm-u-display--block;
				@include dm-u-marginTop--xl;

				// improvisations
				content: "";
				width: 50px;
				height: 5px;
				background: $silverRust;
			}

			&:last-child:after {
				@include dm-u-hide;
			}
		}

	}


	// siteFooter

	&-c-siteFooter {
		
		@include dm-u-clear--both;
		@include dm-u-font--sans;
		@include dm-u-margin--xs;
		@include dm-u-padding--s;
		@include dm-u-paddingTop--m;
		@include dm-u-marginBottom--xl;

		// improvisations
		border-top: 5px solid $sandstone;

		&_copyright {

			@media screen and (min-width: 687px){
				@include dm-l-col--66;
			}

		}

		&_twitter {
			@media screen and (min-width: 687px){
				@include dm-l-col--33;
			}
		}

	}

}


/*-------------------------------------------    
	Third-Party
-------------------------------------------*/

// Carbon Ads

#carbonads {
	@extend .dm-u-clearfix;
	@include dm-u-padding--xs;
	@include dm-u-marginBottom--s;

	// improvisations
	background: $alabaster;
}

	.carbon-wrap {
		
	}

		.carbon-img {
			@include dm-u-float--left;
			@include dm-u-bg--none;
		}

		.carbon-text {
			//@include dm-u-text--xs;
			@include dm-u-font--sans;
			@include dm-u-bg--none;

			// improvisations
			font-size: 12px;
			font-size: 1.2rem;
		}

		.carbon-poweredby {
			@include dm-u-text--xs;
			@include dm-u-show;
			@include dm-u-font--sans;
			@include dm-u-bg--none;
			@include dm-u-marginTop--xs;
		}


/*-------------------------------------------    
	Page Specific: Home
-------------------------------------------*/

.dm-page--home {

	.dm-c-siteNav {
		@include dm-l-width--100;
		@include dm-u-margin--0;
		@include dm-u-padding--0;
	}

}

	.dm-c-pricingDesignContainer {
		//@include dm-l-col--50;
		@include dm-u-marginBottom--l;

		// improvisations
		border: 1px solid $silverRust;
	}


/*-------------------------------------------    
	Page Specific: Articles
-------------------------------------------*/

.dm-page--articles {

	@media screen and (min-width: 520px) {

		.dm-dp-textBlurb {
			@include dm-l-col--50;
			@include dm-u-float--left;
			@include dm-u-paddingRight--l;

			// improvisations
			min-height: 250px;
		}

	}


	@media screen and (min-width: 850px) {

		#carbonads {
			@include dm-u-pos--fixed;

			// improvisations
			right: 0;
			top: 170px;
			width: 24%;
		}

		.dm-c-articlesList {
			width: 76%;
		}

	}

	@media screen and (min-width: 1054px) {

		padding-top: 425px;

		.dm-dp-textBlurb,
		.dm-dp-inlineNav,
		.dm-c-pageHeader_title {
			@include dm-u-paddingLeft--l;
		}

		.dm-c-pageHeader {
			@include dm-u-paddingTop--l;
			@include dm-u-pos--fixed;
			@include dm-l-col--100;

			// improvisations
			background: rgba(255, 255, 255, 0.93);
			top: 0;
			left: 0;
		}

			.dm-c-pageHeader_title {
				@include dm-u-marginBottom--s;
				@include dm-u-paddingBottom--0;
				@include dm-u-pos--relative;

				// improvisations
				font-size: 72px;

				&:before {
					@include dm-u-pos--absolute;

					// improvisations
					content: "";
					left: ($spacing * 4) + px;
					top: -8px;
					width: 96px;
					height: 8px;
					background: $shipGray;
				}

				&:after {
					@include dm-u-pos--absolute;

					// improvisations
					content: "";
					left: 0;
					top: -8px;
					width: ($spacing * 4) + px;
					height: 8px;
					background: $sandstone;
				}

			}

		.dm-dp-inlineNav {
			@include dm-u-paddingTop--0;
		}

	}

}

